[build-system]
requires = [
  "setuptools", 
  "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version"]
name = "qimview"
authors = [
  { name="Karl Krissian", email="karl.krissian@gmail.com" },
]
description = "Library for multiple image visualization and comparison"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21.0",
    "opencv_python>=4.2",
    "psutil>=5.8.0",
    "PyOpenGL>=3.1.5",
    "PySide6>=6.5.2",
    "PySide6_Addons>=6.5.1.1",
    "PySide6_Essentials>=6.5.1.1",
    "simplejpeg>=1.4.0",
]

[project.optional-dependencies]
extra = [
    "rawpy>=0.16.0",
    "python_vlc>=3.0.11115",
    "PyTurboJPEG>=1.4.1",
]

[project.urls]
"Homepage" = "https://github.com/qimview/qimview"
"Wiki" = "hhttps://github.com/qimview/qimview/wiki"
"Bug Tracker" = "https://github.com/qimview/qimview/issues"

[tool.pytest.ini_options]
testpaths = [
    "qimview/pytests",
]

[tool.setuptools.dynamic]
version = {attr = "qimview.__version__"}

[project.scripts]
# Single image viewer
imview = "qimview.imview:main"
# Mutiple image viewer
mview  = "qimview.mview:main"
