[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0",
    "cmake>=3.24",
    "wheel",
    # "libomp ; platform_system == 'Darwin'",
]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version"]
name = "qimview"
authors = [
  { name="Karl Krissian", email="karl.krissian@gmail.com" },
]
description = "Library for multiple image visualization and comparison"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "opencv_python>=4.2",
    "psutil>=5.8.0",
    "PyOpenGL>=3.1.5",
    "PySide6>=6.5.2",
    "PySide6_Addons>=6.5.1.1",
    "PySide6_Essentials>=6.5.1.1",
    "simplejpeg>=1.4.0",
    "PyAV",
]

[project.optional-dependencies]
extra = [
    "rawpy>=0.16.0",
    "python_vlc>=3.0.11115",
    "PyTurboJPEG>=1.4.1",
    "PyOpenGL_accelerate", 
]

[project.urls]
"Homepage" = "https://github.com/qimview/qimview"
"Wiki" = "https://github.com/qimview/qimview/wiki"
"Bug Tracker" = "https://github.com/qimview/qimview/issues"
"API" = "https://qimview.github.io/qimview/"

[tool.pytest.ini_options]
testpaths = [
    "qimview/pytests",
]

# [tool.cibuildwheel.macos]
# before-all = "brew install libomp"
# environment = { OpenMP_ROOT="$(brew --prefix libomp)" }

[tool.setuptools]
packages = ["qimview"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["CMakeLists.txt", "*.cmake"]

[tool.setuptools.dynamic]
version = {attr = "qimview.__version__"}

[project.scripts]
# Single image viewer
imview = "qimview.imview:main"
# Mutiple image viewer
mview  = "qimview.mview:main"
# Test Video player
vplay    = "qimview.ffmpeg_cpp.test_video_player:main"
vplayav  = "qimview.video_player.video_player_av:main"
